--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dev-dependencies]
-#criterion = "0.4.0"
-#iai = "0.1.1"
+criterion = "0.4.0"
 
 #[[bench]]
 #name = "crit"
@@ -48,3 +47,7 @@ panic = 'unwind'
 incremental = false
 codegen-units = 1
 rpath = false
+
+[dependencies]
+lazy_static = "1.4.0"
+once_cell = "1.16.0"
