--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,13 +2,13 @@
 name = "exper_allocator_api"
 authors = [ "Wink Saville <wink@saville.com" ]
 license = "MIT OR Apache-2.0"
-version = "0.2.0"
+version = "0.3.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dev-dependencies]
-criterion = "0.4.0"
+#[dev-dependencies]
+#criterion = "0.4.0"
 
 #[[bench]]
 #name = "crit"
