--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,14 +7,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-#[dev-dependencies]
-#criterion = "0.4.0"
+[dev-dependencies]
+criterion = "0.4.0"
 
-#[[bench]]
-#name = "crit"
-#path = "benches/crit.rs"
-#harness = false
-#
+[[bench]]
+name = "crit"
+path = "benches/crit.rs"
+harness = false
+
 #[[bench]]
 #name = "iai"
 #path = "benches/iai.rs"
